feat: custom tableview cell을 활용하여 table view 구성하기
- 오토레이아웃 설정
- rowHeight로 셀 높이 지정

--- a/contactManager/ContactManagerUI/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/contactManager/ContactManagerUI/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -28,29 +28,77 @@
                                     </connections>
                                 </searchBar>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" textLabel="t9Z-uL-ej1" detailTextLabel="OxX-SD-p2W" style="IBUITableViewCellStyleSubtitle" id="w0N-do-frE">
-                                        <rect key="frame" x="0.0" y="94" width="393" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="84" id="w0N-do-frE" customClass="ContactCell" customModule="ContactManagerUI" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="94" width="393" height="84"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w0N-do-frE" id="KEs-jY-GTp">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="84"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="t9Z-uL-ej1">
-                                                    <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OxX-SD-p2W">
-                                                    <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="43.666666666666664" height="14.333333333333334"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EoC-kW-Fzw">
+                                                    <rect key="frame" x="15" y="8" width="368" height="68"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="261" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="52H-VC-6fI">
+                                                            <rect key="frame" x="0.0" y="0.0" width="53.333333333333336" height="68"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" text="이름 :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ujz-IT-1eZ">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="53.333333333333336" height="22.666666666666668"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="나이 :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VbO-Im-7KX">
+                                                                    <rect key="frame" x="0.0" y="22.666666666666664" width="53.333333333333336" height="22.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="연락처 :" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7n-4t-n8k">
+                                                                    <rect key="frame" x="0.0" y="45.333333333333336" width="53.333333333333336" height="22.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="261" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="TxV-SG-mTe">
+                                                            <rect key="frame" x="61.333333333333343" y="0.0" width="306.66666666666663" height="68"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HiF-c5-M1U">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="306.66666666666669" height="22.666666666666668"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Vc-2d-sU6">
+                                                                    <rect key="frame" x="0.0" y="22.666666666666664" width="306.66666666666669" height="22.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HWH-TC-wKK">
+                                                                    <rect key="frame" x="0.0" y="45.333333333333336" width="306.66666666666669" height="22.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="EoC-kW-Fzw" secondAttribute="bottom" constant="8" id="3ed-MF-wd9"/>
+                                                <constraint firstItem="EoC-kW-Fzw" firstAttribute="top" secondItem="KEs-jY-GTp" secondAttribute="top" constant="8" id="6pl-GN-UjC"/>
+                                                <constraint firstAttribute="trailing" secondItem="EoC-kW-Fzw" secondAttribute="trailing" constant="10" id="BAc-fu-d7z"/>
+                                                <constraint firstItem="EoC-kW-Fzw" firstAttribute="leading" secondItem="KEs-jY-GTp" secondAttribute="leading" constant="15" id="cds-JR-scg"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contactAgeValue" destination="0Vc-2d-sU6" id="Eqr-Xk-ciu"/>
+                                            <outlet property="contactNameValue" destination="HiF-c5-M1U" id="llp-tZ-zdJ"/>
+                                            <outlet property="contactPhoneNumberValue" destination="HWH-TC-wKK" id="Zfo-IJ-bpw"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
